# TetraShift

./: .gitignore  CONTRIBUTING.md  README.md  constants.py  controller.py  eyetracker.py  main.py  model.py  pyproject.toml  requirements.txt  views.py
controller/: TetrisController.py  tetris_controller.py
data/: colors.py  config.py  constants.py  enums.py
docs/: class_descriptions.md
model/: Block.py  Gamelogic.py  TetrisBoard.py  Tetris_piece.py  block.py  game_logic.py  piece_factory.py  tetris_piece.py
view/: GameDisplay.py  game_display.py  ui_button.py
