[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tetrashift"
version = "1.0.0"
description = "A Tetris game with eye-tracking controls using Pygame, OpenCV, and dlib"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "cmake>=3.26",
    "dlib>=19.24",
    "numpy>=1.24",
    "opencv-python>=4.7",
    "pygame>=2.3",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
